fix(AVENGERS-14): Introduce Race and Ethnicity field in Person Model
AI-generated fix.
Jira: AVENGERS-14